--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,16 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  fonts:
+    - family: Avenir
+      fonts:
+        - asset: assets/fonts/Avenir-Book.otf
+        - asset: assets/fonts/Avenir-Medium.otf
+          weight: 600
+        - asset: assets/fonts/Avenir-Heavy.otf
+          weight: 800
+        - asset: assets/fonts/Avenir-Black.otf
+          weight: 900
 
   # To add assets to your application, add an assets section, like this:
   # assets:
