Import MC background assets & add flutter_svg package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.5
+  flutter_svg: ^1.1.4
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +49,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/images/mc_splash_background.jpg
+    - assets/images/mc_splash_background.svg
+
   fonts:
     - family: Avenir
       fonts:
